[package]
name = "f90c"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "2.0.12"
logos = "0.15.1"
structopt = { version = "0.3", features = ["paw"] }
log = "0.4"
env_logger = "0.11"
codespan-reporting = "0.12"
cranelift-codegen = "0.122"
cranelift-object = "0.122"
cranelift-module = "0.122"
cranelift-frontend = "0.122"
target-lexicon = "0.13.2"
lazy_static = "1"
smallvec = "1"
lalrpop-util = { version = "0.22.2", default-features = false, features = ["lexer"] }
uuid = { version = "1.18.0", features = ["v4"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
lalrpop = "0.20"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
